feat: 관심 분야 목록 조회 엔드포인트 문서 추가